# graph-ml

./: README.md  pyproject.toml
01-Introduction_to_GraphML/: 1.1_Intro_to_Graphs.ipynb  1.2_Type_of_Graphs.ipynb  1.3_Graph_representations.ipynb  1.4_Graph_metrics.ipynb
02-Graph_Machine_Learning/: 01_Creating_Node_Rep_with_DeepWalk.ipynb  02_Node2Vec.ipynb  Preliminarlies.ipynb
