[tool.poetry]
name = "graph-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
polars = "^0.20.30"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
networkx = "^3.3"
neo4j = "^5.20.0"
jupyter = "^1.0.0"
scipy = "^1.13.1"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
