[tool.poetry]
name = "graph-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
polars = "^0.20.30"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
networkx = "^3.3"
neo4j = "^5.20.0"
jupyter = "^1.0.0"
torch = "^2.3.0"
scipy = "1.12"
gensim = "^4.3.2"
scikit-learn = "^1.5.0"
fastnode2vec = "^0.0.7"
torch-geometric = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
